--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <p>"Estudante de Engenharia de Software"</p>
             <div class="links">
                 <a href="https://github.com/devgabrielrosas" target="_blank" type="external">GitHub</a>
+
+                <a href="https://www.linkedin.com/in/devgabrielrosas/" target="_blank" type="external">Linkedin</a>
                 
                 <a href="https://www.instagram.com/_rosasgabriel/" target="_blank" type="external">Instagram</a>
                 
