--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 
                 <a href="https://www.instagram.com/_rosasgabriel/" target="_blank" type="external">Instagram Pessoal</a>
 
-                <a href="https://www.instagram.com/_devrosasgabriel/" target="_blank" type="external">Instagram Projetos</a>
+                <a href="https://www.instagram.com/rosasz.dev/" target="_blank" type="external">Instagram Projetos</a>
                 
                 <a href="https://open.spotify.com/playlist/0jTk832y5C6xtmlnxfSfxy?si=cc6abf157ca5468a" target="_blank" type="external">Playlist Spotify Coding</a>
             </div>
